fixed readability of category list

--- a/src/sections/categories-list/categories-type-list-item/CategoriesTypeListItem.module.scss
+++ b/src/sections/categories-list/categories-type-list-item/CategoriesTypeListItem.module.scss
@@ -11,6 +11,7 @@
   font-weight: 300;
   letter-spacing: 0.5px;
   font-size: 12px;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.7));
 }
 
 .separator {
@@ -18,6 +19,7 @@
   height: 0.5px;
   margin-top: 8px;
   background-color: $colWhite;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.7));
 }
 
 .task {
@@ -29,6 +31,7 @@
   font-weight: 300 !important;
   font-size: 12px !important;
   margin-left: 8px;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.7));
 }
 
 .showMore {
@@ -40,4 +43,5 @@
   font-weight: 300;
   font-size: 14px;
   text-decoration: underline;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.7));
 }
